# video-to-audio-bot

./: Dockerfile  README.md  pyproject.toml  run.py  sample.env
dev/examples/: ui_streamlit_app.py  ui_telegram_bot.py  ui_typer_cli.py
project_name/: bot.py  lib.py
tests/: test_imports.py
video_to_audio_bot/: bot.py  convert_to_audio.sh  lib.py  utils.py
